@@ -1,5 +1,7 @@
 2019-06-24  Eduardo Ochs  <eduardoochs@gmail.com>
 
+	* eev-intro.el (find-here-links-intro): added some figures.
+
 	* eev-pdflike.el (ee-find-pdf-text, ee-find-pdftotext-text)
 	(ee-find-texworkspdf-page): added the missing ","s.
 
